# win_hotpants

./: CMakeLists.txt  README.md  extractkern.c  extractkernOnes.c  functions.c  hp_compat.h  main.c  maskim.c  test_basic_commands.ps1  test_demo_a.fits  test_demo_b.fits  test_demo_pair.bat  test_std_a.fits  test_std_b.fits  test_std_pair.bat  test_with_sample_fits.bat  vargs.c
cfitsio/lib/pkgconfig/: cfitsio.pc
